[package]
name = "jito-block-engine-json-rpc-client"
version = "0.1.0"
edition = "2021"
description = "A sample rpc client to generate and send requests to jito block engine server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-rpc-client = "=2.2"
solana-rpc-client-api = "=2.2"
solana-sdk = "=2.2"
solana-transaction-status = "=2.2"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
solana-program = "=2.2"

[workspace]
